History component fully renders. Slight issue with header vs body alignment. Sort by destination not loading.

--- a/src/main/react-front-end/src/App.css
+++ b/src/main/react-front-end/src/App.css
@@ -228,7 +228,7 @@ div.homePage {
 }
 
 .queueHeaderCell p, .queueHeaderCell h1 {
-  font-size: 2.25rem !important;
+  font-size: 2rem !important;
   color: #31708f;
   text-align: center;
   padding-top: .5vh;
